--- a/assesment prob 1.html
+++ b/assesment prob 1.html
@@ -7,6 +7,9 @@
  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
   <style>
+	  .form{
+		background-color:#F0F8FF;
+	}
   	@media(min-width:400px){
 	.form{
 		background-color:#F0F8FF;
