--- a/Tic-Tac-Toe/index.html
+++ b/Tic-Tac-Toe/index.html
@@ -9,6 +9,7 @@
     
 </head>
 <body id="homePageBody">
-    <script src="./scripts.js"></script>
+  
+    <script src="./script.js"></script>
 </body>
 </html>
